// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar renders a logged-in navbar with text 1`] = `
"<Router history={{...}}>
  <Navbar sessionToken={{...}}>
    <styled.nav>
      <nav className=\\"sc-AykKD efbWzt\\">
        <styled.ul>
          <ul className=\\"sc-AykKE bwFPTU\\">
            <styled.li>
              <li className=\\"sc-AykKF btWmVE\\">
                <Styled(Link) to=\\"/\\">
                  <Link to=\\"/\\" className=\\"sc-AykKG jJIHsa\\">
                    <LinkAnchor className=\\"sc-AykKG jJIHsa\\" href=\\"/\\" navigate={[Function: navigate]}>
                      <a className=\\"sc-AykKG jJIHsa\\" href=\\"/\\" onClick={[Function: onClick]}>
                        Home
                      </a>
                    </LinkAnchor>
                  </Link>
                </Styled(Link)>
              </li>
            </styled.li>
            <styled.li>
              <li className=\\"sc-AykKF btWmVE\\">
                <Styled(Link) to=\\"/add\\">
                  <Link to=\\"/add\\" className=\\"sc-AykKG jJIHsa\\">
                    <LinkAnchor className=\\"sc-AykKG jJIHsa\\" href=\\"/add\\" navigate={[Function: navigate]}>
                      <a className=\\"sc-AykKG jJIHsa\\" href=\\"/add\\" onClick={[Function: onClick]}>
                        Add Conference
                      </a>
                    </LinkAnchor>
                  </Link>
                </Styled(Link)>
              </li>
            </styled.li>
            <styled.li>
              <li className=\\"sc-AykKF btWmVE\\">
                <Styled(Link) className=\\"profilePage\\" to=\\"/users/1\\">
                  <Link className=\\"sc-AykKG jJIHsa profilePage\\" to=\\"/users/1\\">
                    <LinkAnchor className=\\"sc-AykKG jJIHsa profilePage\\" href=\\"/users/1\\" navigate={[Function: navigate]}>
                      <a className=\\"sc-AykKG jJIHsa profilePage\\" href=\\"/users/1\\" onClick={[Function: onClick]}>
                        Profile
                      </a>
                    </LinkAnchor>
                  </Link>
                </Styled(Link)>
              </li>
            </styled.li>
            <styled.li>
              <li className=\\"sc-AykKF btWmVE\\">
                <Button className=\\"logout\\" navLink={true} onClick={[Function: logout]}>
                  <styled.button onClick={[Function: logout]} className=\\"logout\\" navLink={true}>
                    <button onClick={[Function: logout]} className=\\"sc-AykKC kmEWeK logout\\">
                      Logout
                    </button>
                  </styled.button>
                </Button>
              </li>
            </styled.li>
          </ul>
        </styled.ul>
      </nav>
    </styled.nav>
  </Navbar>
</Router>"
`;

exports[`Navbar renders a logged-out navbar with text 1`] = `
"<Router history={{...}}>
  <Navbar>
    <styled.nav>
      <nav className=\\"sc-AykKD efbWzt\\">
        <styled.ul>
          <ul className=\\"sc-AykKE bwFPTU\\">
            <styled.li>
              <li className=\\"sc-AykKF btWmVE\\">
                <Styled(Link) to=\\"/\\">
                  <Link to=\\"/\\" className=\\"sc-AykKG jJIHsa\\">
                    <LinkAnchor className=\\"sc-AykKG jJIHsa\\" href=\\"/\\" navigate={[Function: navigate]}>
                      <a className=\\"sc-AykKG jJIHsa\\" href=\\"/\\" onClick={[Function: onClick]}>
                        Home
                      </a>
                    </LinkAnchor>
                  </Link>
                </Styled(Link)>
              </li>
            </styled.li>
            <styled.li>
              <li className=\\"sc-AykKF btWmVE\\">
                <Styled(Link) to=\\"/add\\">
                  <Link to=\\"/add\\" className=\\"sc-AykKG jJIHsa\\">
                    <LinkAnchor className=\\"sc-AykKG jJIHsa\\" href=\\"/add\\" navigate={[Function: navigate]}>
                      <a className=\\"sc-AykKG jJIHsa\\" href=\\"/add\\" onClick={[Function: onClick]}>
                        Add Conference
                      </a>
                    </LinkAnchor>
                  </Link>
                </Styled(Link)>
              </li>
            </styled.li>
            <styled.li>
              <li className=\\"sc-AykKF btWmVE\\">
                <Styled(Link) className=\\"register\\" to=\\"/users/register\\">
                  <Link className=\\"sc-AykKG jJIHsa register\\" to=\\"/users/register\\">
                    <LinkAnchor className=\\"sc-AykKG jJIHsa register\\" href=\\"/users/register\\" navigate={[Function: navigate]}>
                      <a className=\\"sc-AykKG jJIHsa register\\" href=\\"/users/register\\" onClick={[Function: onClick]}>
                        Register
                      </a>
                    </LinkAnchor>
                  </Link>
                </Styled(Link)>
              </li>
            </styled.li>
            <styled.li>
              <li className=\\"sc-AykKF btWmVE\\">
                <Styled(Link) className=\\"login\\" to=\\"/users/login\\">
                  <Link className=\\"sc-AykKG jJIHsa login\\" to=\\"/users/login\\">
                    <LinkAnchor className=\\"sc-AykKG jJIHsa login\\" href=\\"/users/login\\" navigate={[Function: navigate]}>
                      <a className=\\"sc-AykKG jJIHsa login\\" href=\\"/users/login\\" onClick={[Function: onClick]}>
                        Login
                      </a>
                    </LinkAnchor>
                  </Link>
                </Styled(Link)>
              </li>
            </styled.li>
          </ul>
        </styled.ul>
      </nav>
    </styled.nav>
  </Navbar>
</Router>"
`;
